# legion-os

./: .gitignore  Architecture.txt  CHANGELOG.md  LEDGER.md  LICENSE  README.md  RadioStation_ShishiOdoshi.xlsx  _committee_spec.md  _headroom_spec.md  _ui_spec.md  aggregate_directory_metadata.py  clean_music.py  committee-os-manual.html  committee.py  committee_live.txt  committee_memo.md  committee_template.py  config.json  diff.txt  diff_output.txt  dry_run_out.txt  original_test_stage6.txt  rename_transaction_20260707_060240.json  serve_legion.py  spec_graph_evolution.md  status.txt  system_modes.json  temp_error_body_utf8.txt  test music library.xlsx  test_out.txt  test_output.txt  test_spec.py  test_spec.txt  traceback.txt  workspace_diff.txt
.agent/workflows/: committee-gatekeeper.md
Reference/agentic-rag-for-dummies-main/agentic-rag-for-dummies-main/: .gitignore  README.md  requirements.txt
Reference/awesome-LangGraph-main/awesome-LangGraph-main/: .markdownlint.json  CONTRIBUTING.md  package.json
Reference/deepagents-main/deepagents-main/: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  action.yml  release-please-config.json
Reference/deepagents-main/deepagents-main/.github/: CODEOWNERS  (+3 more)
Reference/deepagents-main/deepagents-main/examples/async-subagent-server/: README.md  pyproject.toml
Reference/deepagents-main/deepagents-main/examples/content-builder-agent/: README.md  pyproject.toml
Reference/deepagents-main/deepagents-main/examples/nvidia_deep_agent/: README.md  pyproject.toml
music_tools/: RadioStation_ShishiOdoshi.xlsx  rename_music.py
public/: index.html  scripts.js  styles.css
src/: __init__.py  compression_engine.py  db.py  init_db.py  legion_graph.py  pipeline_state.py  retraction_engine.py  server.js  stage0_mission.py  stage1_ingest.py  stage2_parse.py  stage3_filter.py  stage4_weigh.py  stage5_deliberate.py  stage6_output.py  web_server.py
tests/: test_phase1.py  test_rename_music.py  test_retraction.py  test_source_mapper.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_web_ingest.py
(+465 files in other folders)
