[project]
name = "nemotron-deep-agent"
version = "0.1.0"
description = "General-purpose deep agent: frontier orchestrator + Nemotron Super subagents + NVIDIA GPU skills"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.3.11,<2.0.0",
    "langchain-anthropic>=1.4.7",
    "langgraph>=1.2.6",
    "tavily-python>=0.7.26",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.2",
    "langgraph-cli[inmem]>=0.4.30",
    "modal>=1.5.1",
    "langchain-modal>=0.0.5",
    "langchain-nvidia-ai-endpoints>=1.4.2",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
